feat: implement skill management module